Prevent scrolling on mobile devices

--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     padding: 0;
     color: black;
+    position: relative;
+    overflow: hidden;
 }
 
 #wrapper {
